@@ -1,3 +1,9 @@
+2005-04-01  Michael Koch  <konqueror@gmx.de>
+
+	* java/io/PipedInputStream.java
+	(read): Make sure a positive byte value is returned. Revised javadoc.
+	Thanks to Olafur Bragason for reporting these bugs.
+
 2005-04-01  Jeroen Frijters  <jeroen@frijters.net>
 
 	* java/util/Timer.java
